short commit message goes here

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
             <div class="searchwords">
                 Type to search
             </div>
-            
+
         </div>
     </header>
     <nav class="nav">
-        <div class="home">Home  |</div>
-        <div class="posts">Recent posts  |</div>
-        <div class="oldposts">Old posts  |</div>
-        <div class="contactus">Contact us  |</div>
+        <div class="home">Home |</div>
+        <div class="posts">Recent posts |</div>
+        <div class="oldposts">Old posts |</div>
+        <div class="contactus">Contact us |</div>
         <div class="about">About us</div>
     </nav>
     <br />
@@ -33,12 +33,16 @@
     <b class="font20">First post with image</b>
     <br>
     <p class="font14">By Adam Smith On January 1, 2018</p>
-    <p class="font14">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium incidunt omnis porro earum adipisci ratione tenetur aliquid,
-         doloribus minima qui ipsa sint facere cumque maiores pariatur hic laboriosam laudantium praesentium. Lorem ipsum dolor sit amet consectetur 
-         adipisicing elit. Voluptas mollitia eligendi delectus, voluptatibus quas expedita aliquam quam non suscipit earum, a labore, dicta architecto
-         nobis quibusdam fuga magni. Natus, veniam.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, amet a, totam nobis consequuntur, eos quidem repudiandae minus tempora debitis
-         laboriosam alias aspernatur veniam ducimus animi illum aliquid facilis? Illo?
+    <p class="font14">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium incidunt omnis porro earum
+        adipisci ratione tenetur aliquid,
+        doloribus minima qui ipsa sint facere cumque maiores pariatur hic laboriosam laudantium praesentium. Lorem ipsum
+        dolor sit amet consectetur
+        adipisicing elit. Voluptas mollitia eligendi delectus, voluptatibus quas expedita aliquam quam non suscipit
+        earum, a labore, dicta architecto
+        nobis quibusdam fuga magni. Natus, veniam.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, amet a, totam nobis consequuntur, eos quidem
+        repudiandae minus tempora debitis
+        laboriosam alias aspernatur veniam ducimus animi illum aliquid facilis? Illo?
     </p>
     <div class="readmore">
         <div class="readmorewords">
@@ -55,9 +59,14 @@
     <b class="font20">Second post with image</b>
     <br>
     <p class="font14">By Adam Smith On January 1, 2018</p>
-    <p class="font14">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium incidunt omnis porro earum adipisci ratione tenetur aliquid, doloribus minima qui ipsa sint facere cumque maiores pariatur hic laboriosam laudantium praesentium.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas mollitia eligendi delectus, voluptatibus quas expedita aliquam quam non suscipit earum, a labore, dicta architecto nobis quibusdam fuga magni. Natus, veniam.<br>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, amet a, totam nobis consequuntur, eos quidem repudiandae minus tempora debitis laboriosam alias aspernatur veniam ducimus animi illum aliquid facilis? Illo?
+    <p class="font14">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium incidunt omnis porro earum
+        adipisci ratione tenetur aliquid, doloribus minima qui ipsa sint facere cumque maiores pariatur hic laboriosam
+        laudantium praesentium.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas mollitia eligendi delectus, voluptatibus quas
+        expedita aliquam quam non suscipit earum, a labore, dicta architecto nobis quibusdam fuga magni. Natus,
+        veniam.<br>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, amet a, totam nobis consequuntur, eos quidem
+        repudiandae minus tempora debitis laboriosam alias aspernatur veniam ducimus animi illum aliquid facilis? Illo?
     </p>
     <div class="readmore">
         <div class="readmorewords">
@@ -71,12 +80,12 @@
     <hr />
     <div class="previousbutton">
         <div class="previousbuttonwords">
-           <p>Prev</p>
+            <p>Prev</p>
         </div>
     </div>
     <div class="numberpage">
-    <div class="numberpagewords">
-           <p>1/4</p>
+        <div class="numberpagewords">
+            <p>1/4</p>
         </div>
     </div>
     <div class="nextbutton">
